--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -10,5 +10,13 @@
         <span>Profile Name</span>
       </a>
     </li>
+
+    <li>
+      <a href="#" (click)="logout($event)">Logout</a>
+    </li>
   </ul>
 </nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
