--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,49 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+  <h2>Login</h2>
+
+  <div
+    class="form-control"
+    [ngClass]="{
+      invalid: form.get('username').touched && form.get('username').invalid
+    }"
+  >
+    <label for="username">Username</label>
+    <input type="text" formControlName="username" id="username" />
+    <div
+      *ngIf="form.get('username').touched && form.get('username').invalid"
+      class="validation"
+    >
+      <small *ngIf="form.get('username').errors.required"
+        >Username required</small
+      >
+    </div>
+  </div>
+
+  <div
+    class="form-control"
+    [ngClass]="{
+      invalid: form.get('password').touched && form.get('password').invalid
+    }"
+  >
+    <label for="email">Password</label>
+    <input type="password" formControlName="password" id="password" />
+    <div
+      class="validation"
+      *ngIf="form.get('password').touched && form.get('password').invalid"
+    >
+      <small *ngIf="form.get('password').errors.required"
+        >Password required</small
+      >
+      <small *ngIf="form.get('password').errors.minlength"
+        >Password minimum length is
+        {{ form.get("password").errors.minlength.requiredLength }}. Password
+        length is
+        {{ form.get("password").errors.minlength.actualLength }}</small
+      >
+    </div>
+  </div>
+
+  <button type="submit" [disabled]="form.invalid" class="btn btn-dark">
+    Login
+  </button>
+</form>
