--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,6 +1,10 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
   <h2>Login</h2>
 
+  <div class="alert alert-danger" *ngIf="authService.error$ | async as error">
+    {{ error }}
+  </div>
+
   <div
     class="form-control"
     [ngClass]="{
@@ -43,7 +47,11 @@
     </div>
   </div>
 
-  <button type="submit" [disabled]="form.invalid" class="btn btn-dark">
+  <button
+    type="submit"
+    [disabled]="form.invalid || submitted"
+    class="btn btn-dark"
+  >
     Login
   </button>
 </form>
