--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -2,7 +2,7 @@
   <h1>
     <a routerLink="/">JWT Viewer</a>
   </h1>
-  <ul>
+  <ul *ngIf="authService.isAuthenticated()">
     <li>
       <a class="profile-link">
         <img src="http://robohash.org/jwt" alt="img" />
