--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar bg-dark">
   <h1>
-    <a routerLink="/">JWT Viewer</a>
+    <a routerLink="/admin">JWT Viewer</a>
   </h1>
-  <ul *ngIf="authService.isAuthenticated()">
+  <ul *ngIf="authService.isAuthenticated(); else register">
     <li>
       <a class="profile-link">
         <img src="http://robohash.org/jwt" alt="img" />
@@ -20,3 +20,15 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<ng-template #register>
+  <ul>
+    <li>
+      <a [routerLink]="['/admin', 'login']">Login </a>
+    </li>
+
+    <li>
+      <a [routerLink]="['/admin', 'register']">Register</a>
+    </li>
+  </ul>
+</ng-template>
