--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.scss
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.scss
@@ -1,6 +1,14 @@
 ul {
   display: flex;
   align-items: center;
+
+  i {
+    transition: all 0.3s;
+
+    &.is-expanded {
+      transform: rotate(180deg);
+    }
+  }
 }
 
 .profile-link {
