--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -6,7 +6,11 @@
     <li>
       <a class="profile-link" [routerLink]="['/admin', 'dashboard']">
         <img src="http://robohash.org/jwt" alt="img" />
-        <i class="fas fa-chevron-down"></i>
+        <i
+          class="fas fa-chevron-down"
+          (click)="isOpen = !isOpen"
+          [class.is-expanded]="isOpen"
+        ></i>
         <span>Profile Name</span>
       </a>
     </li>
