--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -11,7 +11,7 @@
           (click)="isOpen = !isOpen"
           [class.is-expanded]="isOpen"
         ></i>
-        <span>Profile Name</span>
+        <span>{{ authService.username }}</span>
       </a>
     </li>
 
