--- a/src/styles.scss
+++ b/src/styles.scss
@@ -249,6 +249,7 @@ button {
     color: #fff;
     padding: 0.45rem;
     margin: 0 0.25rem;
+    height: 30px;
 
     &:hover {
       color: var(--light-color);
