--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,6 @@
 <div class="container text-center">
   <img
+    data-cy="jwtLogo"
     src="https://iconape.com/wp-content/files/ht/133583/svg/133583.svg"
     alt="logo"
   />
