--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -2,7 +2,10 @@
   <h1>
     <a routerLink="/admin">JWT Viewer</a>
   </h1>
-  <ul *ngIf="authService.isAuthenticated(); else register">
+  <ul
+    data-cy="profileMenu"
+    *ngIf="authService.isAuthenticated(); else register"
+  >
     <li>
       <a class="profile-link" [routerLink]="['/admin', 'dashboard']">
         <img src="http://robohash.org/jwt" alt="img" />
@@ -10,8 +13,9 @@
           class="fas fa-chevron-down"
           (click)="isOpen = !isOpen"
           [class.is-expanded]="isOpen"
+          data-cy="arrow"
         ></i>
-        <span>{{ authService.username }}</span>
+        <span data-cy="profileName">{{ authService.username }}</span>
       </a>
     </li>
 
@@ -28,11 +32,13 @@
 <ng-template #register>
   <ul>
     <li>
-      <a [routerLink]="['/admin', 'login']">Login </a>
+      <a data-cy="loginButton" [routerLink]="['/admin', 'login']">Login </a>
     </li>
 
     <li>
-      <a [routerLink]="['/admin', 'register']">Register</a>
+      <a data-cy="registerButton" [routerLink]="['/admin', 'register']"
+        >Register</a
+      >
     </li>
   </ul>
 </ng-template>
