fix logout test

--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -20,7 +20,7 @@
     </li>
 
     <li>
-      <a href="#" (click)="logout($event)">Logout</a>
+      <a data-cy="logoutButton" href="#" (click)="logout($event)">Logout</a>
     </li>
   </ul>
 </nav>
